--- a/Catch Bat/Base.lproj/MainMenu.xib
+++ b/Catch Bat/Base.lproj/MainMenu.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16096" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16096"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -12,102 +11,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Catch_Bat" customModuleProvider="target">
-            <connections>
-                <outlet property="MacAddress" destination="Vz6-Km-aQ4" id="dqR-yu-Bc0"/>
-                <outlet property="PortName" destination="Gnv-iM-k4D" id="B9i-N6-Rtu"/>
-                <outlet property="QuitButton" destination="MRT-Jg-L3o" id="lMQ-0f-WSG"/>
-                <outlet property="ToggleWiFiButton" destination="dAJ-Gg-1lJ" id="Ldq-ye-wAE"/>
-                <outlet property="WiFiConnected" destination="mEu-oy-JgD" id="kvt-up-Bwo"/>
-                <outlet property="WiFiEncryption" destination="hlQ-dG-mc4" id="GKn-nE-brX"/>
-                <outlet property="WiFiNameMenu" destination="yrB-TL-66G" id="IXb-RS-XKh"/>
-                <outlet property="WiFiSSID" destination="LPB-j5-8So" id="sKQ-f5-zvF"/>
-                <outlet property="WiFiSignal" destination="k3L-tn-Mbq" id="bJx-b5-cvL"/>
-                <outlet property="WiFiStatusMenuItem" destination="lPz-HI-M0h" id="lE8-SF-1K4"/>
-                <outlet property="statusMenu" destination="wfL-ce-HRz" id="tkR-d4-Yqz"/>
-            </connections>
-        </customObject>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Catch_Bat" customModuleProvider="target"/>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
-        <menu autoenablesItems="NO" id="wfL-ce-HRz">
-            <items>
-                <menuItem title="接口名称： en1" hidden="YES" id="Gnv-iM-k4D">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem title="地址： ac:e0:10:95:3e:35" hidden="YES" id="Vz6-Km-aQ4">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem title="启用Wi-Fi记录" hidden="YES" id="Bof-nW-eKj">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem title="创建诊断报告..." hidden="YES" id="jp7-5s-unz">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem title="打开无线诊断..." hidden="YES" id="sT1-Y2-yYe">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" hidden="YES" id="PQP-Wg-tpZ" userLabel="Option Menu Separator"/>
-                <menuItem title="Wi-FI:  关闭" id="lPz-HI-M0h" userLabel="Wi-FI Status Menu Item">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                </menuItem>
-                <menuItem title="开启Wi-Fi" state="on" id="dAJ-Gg-1lJ" userLabel="Toggle Wi-Fi Menu Item">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="ToggleWiFiStatus:" target="Voe-Tx-rLC" id="LIA-Na-wCV"/>
-                    </connections>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" id="SGP-wQ-gqX" userLabel="Wi-Fi List Begin Separator"/>
-                <menuItem title="放走Bat" hidden="YES" id="MRT-Jg-L3o">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="Quit:" target="Voe-Tx-rLC" id="uxw-pX-aXu"/>
-                    </connections>
-                </menuItem>
-            </items>
-            <point key="canvasLocation" x="-3821" y="-3463"/>
-        </menu>
-        <customView id="yrB-TL-66G" userLabel="WiFi Name Menu Item View">
-            <rect key="frame" x="0.0" y="0.0" width="285" height="18"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-            <subviews>
-                <button fixedFrame="YES" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NBz-zz-s1D">
-                    <rect key="frame" x="0.0" y="0.0" width="285" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Qkb-QQ-v9c">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LPB-j5-8So">
-                    <rect key="frame" x="19" y="0.0" width="206" height="18"/>
-                    <autoresizingMask key="autoresizingMask"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Catch Bat" id="0mF-3y-Rdp">
-                        <font key="font" metaFont="menu" size="14"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k3L-tn-Mbq">
-                    <rect key="frame" x="257" y="0.0" width="18" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="AirPortInMenu4" id="uTK-vB-ahd"/>
-                </imageView>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mEu-oy-JgD">
-                    <rect key="frame" x="3" y="0.0" width="18" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSMenuOnStateTemplate" id="dsc-Xj-RyT"/>
-                </imageView>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hlQ-dG-mc4">
-                    <rect key="frame" x="231" y="0.0" width="18" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSLockLockedTemplate" id="6i8-vP-J9J"/>
-                </imageView>
-            </subviews>
-            <point key="canvasLocation" x="-4135.5" y="-3418"/>
-        </customView>
     </objects>
-    <resources>
-        <image name="AirPortInMenu4" width="21" height="16"/>
-        <image name="NSLockLockedTemplate" width="10" height="14"/>
-        <image name="NSMenuOnStateTemplate" width="12" height="12"/>
-    </resources>
 </document>
